[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Caldeirao.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Fundos/Caldeirao.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Medidor/MedidorTemperatura.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Medidor/Ponteiro.png" type="Texture" id=4]
[ext_resource path="res://Animations/AnimatedFire2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Animations/AnimatedFire.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Fundos/CaldeiraoStone.png" type="Texture" id=7]
[ext_resource path="res://Animations/Redemoinho.tscn" type="PackedScene" id=8]
[ext_resource path="res://Animations/AnimatedBolha.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sounds/fire.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/caldeirao.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/borbulheira.wav" type="AudioStream" id=12]
[ext_resource path="res://Sprites/Medidor/MedidorUmidade.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Medidor/Ponteiro2.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "RedemoinhoAnim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Redemoinho:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.383179, -5.98694 ), Vector2( -0.383179, -5.98694 ), Vector2( -0.383179, -5.98694 ), Vector2( -0.383179, -5.98694 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Redemoinho:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.94684, 2.58845, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Redemoinho:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.375, 1 ), Vector2( 1.09615, 0.705081 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Redemoinho:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.383179, -5.98694 ), Vector2( -0.383179, -5.98694 ), Vector2( -0.383179, -5.98694 ), Vector2( -0.383179, -5.98694 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Redemoinho:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.94684, 2.58845, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Redemoinho:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.375, 1 ), Vector2( 1.09615, 0.705081 ), Vector2( 1, 1 ) ]
}

[node name="Caldeirao" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 639.005, 360.756 )
scale = Vector2( 0.667839, 0.667839 )
texture = ExtResource( 2 )

[node name="ControladorTemperatura" type="Sprite" parent="Sprite"]
position = Vector2( 831.568, -442.833 )
scale = Vector2( 0.397329, 0.397329 )
texture = ExtResource( 3 )

[node name="Ponteiro" type="Sprite" parent="Sprite/ControladorTemperatura"]
position = Vector2( 0.374023, 156.785 )
scale = Vector2( 1.34093, 1.34093 )
texture = ExtResource( 4 )

[node name="ButtonExpandTermometro" type="Button" parent="Sprite/ControladorTemperatura"]
margin_left = -163.862
margin_top = -135.0
margin_right = 172.138
margin_bottom = 162.0
mouse_default_cursor_shape = 2
flat = true

[node name="Fogo1" parent="." instance=ExtResource( 5 )]
position = Vector2( 423.269, 560.253 )
scale = Vector2( 0.55, 0.555556 )

[node name="Fogo2" parent="." instance=ExtResource( 5 )]
position = Vector2( 843.817, 546.687 )
rotation = 3.14159
scale = Vector2( 0.55, -0.556 )

[node name="Fogo3" parent="." instance=ExtResource( 6 )]
position = Vector2( 607.81, 647.466 )
scale = Vector2( 0.55, 0.555556 )

[node name="CaldeiraoStone" type="Sprite" parent="."]
position = Vector2( 629.775, 561.76 )
scale = Vector2( 0.672045, 0.672045 )
texture = ExtResource( 7 )

[node name="Redemoinho" parent="." instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0.227451 )
position = Vector2( 634.39, 290.427 )
scale = Vector2( 0.495361, 0.455209 )

[node name="Redemoinho3" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.227451 )
position = Vector2( 634.39, 290.427 )
rotation = -1.55149
scale = Vector2( 0.343112, 0.977428 )

[node name="Redemoinho" parent="Redemoinho3" index="0"]
rotation = -0.0374357
scale = Vector2( 1.20379, 1 )

[node name="AnimationPlayer" parent="Redemoinho3" index="1"]
playback_speed = 1.35
anims/RedemoinhoAnim = SubResource( 1 )

[node name="Redemoinho2" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.635294 )
position = Vector2( 634.39, 290.427 )
rotation = 3.14159
scale = Vector2( 0.43522, -0.627172 )

[node name="Redemoinho" parent="Redemoinho2" index="0"]
modulate = Color( 1, 1, 1, 0.235294 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="AnimationPlayer" parent="Redemoinho2" index="1"]
playback_speed = 3.0
anims/RedemoinhoAnim = SubResource( 2 )

[node name="Bolha" parent="." instance=ExtResource( 9 )]
position = Vector2( 636.06, 360.575 )
scale = Vector2( 0.198743, 0.151464 )

[node name="Bolha2" parent="." instance=ExtResource( 9 )]
position = Vector2( 539.763, 306.178 )
scale = Vector2( 0.378685, 0.367822 )

[node name="Bolha3" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 617.683, 272.364 )
scale = Vector2( 0.218037, 0.207446 )

[node name="AnimatedSprite2" parent="Bolha3" index="0"]
frame = 0
speed_scale = 1.7

[node name="Bolha4" parent="." instance=ExtResource( 9 )]
position = Vector2( 719.126, 309.118 )
scale = Vector2( 0.344345, 0.254889 )

[node name="Bolha5" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 719.126, 227.523 )
scale = Vector2( 0.495361, 0.455209 )

[node name="AnimatedSprite2" parent="Bolha5" index="0"]
frame = 2
speed_scale = 2.7

[node name="Bolha6" parent="." instance=ExtResource( 9 )]
position = Vector2( 555.935, 212.086 )
scale = Vector2( 0.236924, 0.184152 )

[node name="Bolha7" parent="." instance=ExtResource( 9 )]
position = Vector2( 650.762, 182.682 )
scale = Vector2( 0.294933, 0.326831 )

[node name="AnimatedSprite2" parent="Bolha7" index="0"]
speed_scale = 2.1

[node name="Bolha8" parent="." instance=ExtResource( 9 )]
position = Vector2( 783.814, 280.45 )
scale = Vector2( 0.2993, 0.225329 )

[node name="AnimatedSprite2" parent="Bolha8" index="0"]
frame = 1
speed_scale = 2.4

[node name="TempControl" type="ColorRect" parent="."]
visible = false
margin_right = 1278.0
margin_bottom = 720.0
color = Color( 0.866667, 0.705882, 0.223529, 1 )

[node name="Sprite" type="Sprite" parent="TempControl"]
position = Vector2( 624.042, 275.702 )
scale = Vector2( 1.24396, 1.24396 )
texture = ExtResource( 3 )

[node name="Ponteiro" type="Sprite" parent="TempControl/Sprite"]
position = Vector2( -2.44202, 145.815 )
scale = Vector2( 1.40041, 1.40041 )
texture = ExtResource( 4 )

[node name="ButtonTermControl" type="Button" parent="TempControl/Sprite"]
margin_left = -255.0
margin_top = -138.0
margin_right = 266.0
margin_bottom = 155.0
mouse_default_cursor_shape = 2
flat = true

[node name="Fogo" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 633.359, 288.854 )
stream = ExtResource( 10 )
volume_db = 13.098
autoplay = true
max_distance = 100.0

[node name="caldeirao" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 633.359, 288.854 )
stream = ExtResource( 11 )
volume_db = 13.098
max_distance = 100.0

[node name="Borbulheira" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 633.359, 288.854 )
stream = ExtResource( 12 )
volume_db = -7.373
autoplay = true
max_distance = 100.0

[node name="MedidorUmidade" type="Sprite" parent="."]
position = Vector2( 77.7013, 64.063 )
scale = Vector2( 0.403423, 0.403423 )
texture = ExtResource( 13 )

[node name="PonteiroUmidade" type="Sprite" parent="MedidorUmidade"]
position = Vector2( 0.397522, 3.97531 )
rotation = -2.44346
scale = Vector2( 0.556906, 0.556906 )
texture = ExtResource( 14 )
[connection signal="button_down" from="Sprite/ControladorTemperatura/ButtonExpandTermometro" to="." method="_on_ButtonExpandTermometro_button_down"]
[connection signal="button_down" from="TempControl/Sprite/ButtonTermControl" to="." method="_on_ButtonTermControl_button_down"]
[connection signal="button_up" from="TempControl/Sprite/ButtonTermControl" to="." method="_on_ButtonTermControl_button_up"]

[editable path="Redemoinho3"]

[editable path="Redemoinho2"]

[editable path="Bolha3"]

[editable path="Bolha5"]

[editable path="Bolha7"]

[editable path="Bolha8"]
